added link to git repo

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 		</label>
 
 		<br>
+		<br>
+		<a href="https://github.com/imadx/svg-sine-anim" class="button" title="View Source on Github" target="_blank" class="button">View Source</a>
 		<a href="http://www.imadhusanka.me" class="button" title="View my resume online" target="_blank" class="button">View my Resume</a>
 	</div>
 </div>
